--- a/_config.yml
+++ b/_config.yml
@@ -74,7 +74,7 @@ author:
   xing             : # Username
   youtube          : # Username
   zhihu            : # Username
-  wordpress        : "xiaozhouli"
+  wordpress        : #"xiaozhouli"
 
 # Publication Category - The following the list of publication categories and their headings
 publication_category:
