--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "Computational mathematician. Interested in numerical PDEs, DG methods, and long-term training."
   location         : "Chengdu, Sichuan"
-  employer         : "University of Electronic Science and Technology of China"
+  employer         : "UESTC"
   uri              : # URL
   email            : "xiaozhouli@uestc.edu.cn" 
 
