--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -23,11 +23,11 @@ main:
   - title: "Portfolio"
     url: /portfolio/
         
-  - title: "Blog Posts"
+  - title: "Blog"
     url: /year-archive/
     
-  - title: "CV"
-    url: /cv/
+  - title: "About"
+    url: /about/
     
   # - title: "CV"
   #   url: /cv-json/
