--- a/_config.yml
+++ b/_config.yml
@@ -266,10 +266,10 @@ defaults:
       author_profile: true
       share: true
       comments: true
-  # _portfolio
+  # _resources
   - scope:
       path: ""
-      type: portfolio
+      type: resources
     values:
       layout: single
       author_profile: true
