--- a/_config.yml
+++ b/_config.yml
@@ -220,7 +220,7 @@ collections:
   publications:
     output: true
     permalink: /:collection/:path/
-  portfolio:
+  resources:
     output: true
     permalink: /:collection/:path/
   talks:
