--- a/_config.yml
+++ b/_config.yml
@@ -15,14 +15,14 @@ name                     : &name "Xiaozhou Li"
 description              : &description "Associate Researcher at UESTC"
 url                      : https://xiaozhouli.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "xiaozhouli.github.io"
+repository               : "xiaozhouli/xiaozhouli.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "xiaozhou.jpg"
+  avatar           : "xiaozhou1.jpg"
   name             : "Dr. Xiaozhou Li"
   pronouns         : # example: "she/her"  
   bio              : "Computational mathematician. Interested in numerical PDEs, DG methods, and long-term training."
