setting the blog page

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -28,7 +28,7 @@ main:
     url: /resources/
         
   - title: "Blog"
-    url: /year-archive/
+    url: /blog/
     
   - title: "About Me"
     url: /me/
