--- a/_config.yml
+++ b/_config.yml
@@ -214,6 +214,9 @@ kramdown:
 
 # These settings control the types of collections used by the template
 collections:
+  posts:
+    output: true
+    permalink: /:collection/:path/
   teaching:
     output: true
     permalink: /:collection/:path/
