home page, calculus I 2025

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "xiaozhou1.jpg"
   name             : "Dr. Xiaozhou Li"
   pronouns         : # example: "she/her"  
-  bio              : "Computational mathematician. Interested in numerical PDEs, DG methods, and long-term training."
+  bio              : "Mathematics. Strength. Long-Term Mindset. Think Hard. Train Harder. Live Long."
   location         : "Chengdu, Sichuan"
   employer         : "UESTC"
   uri              : # URL
